--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -20,6 +20,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="z9x-Nb-Rv9">
                                 <rect key="frame" x="0.0" y="59" width="414" height="896"/>
                                 <color key="backgroundColor" name="YP Black"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="6HL-og-Dvw"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Mwd-1f-41a"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
