--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
@@ -14,15 +14,64 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ImagesListViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="z9x-Nb-Rv9">
                                 <rect key="frame" x="0.0" y="59" width="414" height="896"/>
                                 <color key="backgroundColor" name="YP Black"/>
+                                <color key="separatorColor" name="YP Black"/>
+                                <color key="sectionIndexBackgroundColor" name="YP Black"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" id="DnA-5T-tAa" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="414" height="223"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DnA-5T-tAa" id="odM-18-oUf">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="223"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="bwy-jg-BEd">
+                                                    <rect key="frame" x="16" y="4" width="382" height="215"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="bwy-jg-BEd" secondAttribute="height" multiplier="16:9" id="SU8-mg-qtq"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="16"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ce-a7-Gs0" userLabel="Like Button">
+                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
+                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                    <state key="normal" image="LikeButtonOn"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cfd-l2-GqN" userLabel="Date Label">
+                                                    <rect key="frame" x="32" y="195" width="101.5" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" name="YP Black"/>
+                                            <constraints>
+                                                <constraint firstItem="5ce-a7-Gs0" firstAttribute="top" secondItem="bwy-jg-BEd" secondAttribute="top" id="FIV-zE-5te"/>
+                                                <constraint firstAttribute="bottom" secondItem="bwy-jg-BEd" secondAttribute="bottom" constant="4" id="Gpx-k8-HvL"/>
+                                                <constraint firstItem="bwy-jg-BEd" firstAttribute="leading" secondItem="odM-18-oUf" secondAttribute="leading" constant="16" id="I2t-op-YUX"/>
+                                                <constraint firstItem="Cfd-l2-GqN" firstAttribute="leading" secondItem="bwy-jg-BEd" secondAttribute="leading" constant="16" id="PIh-7I-Ey0"/>
+                                                <constraint firstItem="bwy-jg-BEd" firstAttribute="top" secondItem="odM-18-oUf" secondAttribute="top" constant="4" id="Ybc-DJ-uMT"/>
+                                                <constraint firstItem="bwy-jg-BEd" firstAttribute="bottom" secondItem="Cfd-l2-GqN" secondAttribute="bottom" constant="8" id="c2k-Pa-s3m"/>
+                                                <constraint firstItem="bwy-jg-BEd" firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="Cfd-l2-GqN" secondAttribute="trailing" constant="8" id="cx1-nb-Mps"/>
+                                                <constraint firstAttribute="trailing" secondItem="bwy-jg-BEd" secondAttribute="trailing" constant="16" id="dn9-G6-mF8"/>
+                                                <constraint firstItem="bwy-jg-BEd" firstAttribute="trailing" secondItem="5ce-a7-Gs0" secondAttribute="trailing" id="lVB-cR-Xkd"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="6HL-og-Dvw"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Mwd-1f-41a"/>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="6Xp-Os-mi8"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="MgX-Y2-Ekd"/>
                                 </connections>
                             </tableView>
                         </subviews>
@@ -36,7 +85,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="imagesTable" destination="z9x-Nb-Rv9" id="Fu3-RX-RYE"/>
+                        <outlet property="imagesTable" destination="z9x-Nb-Rv9" id="sHb-gE-eup"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -45,6 +94,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="0" width="200" height="132"/>
+        <image name="LikeButtonOn" width="44" height="44"/>
         <namedColor name="YP Black">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
