--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -96,7 +96,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="956.52173913043487" y="-2.6785714285714284"/>
+            <point key="canvasLocation" x="864" y="-3"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="D1Q-MO-zQj">
@@ -119,7 +119,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Hv-5X-eXQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1574" y="360"/>
+            <point key="canvasLocation" x="-871" y="299"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="Vn3-cr-fSf">
@@ -206,6 +206,11 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="LId-9Z-K8K">
                         <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" name="YP White"/>
+                        <color key="barTintColor" name="YP White"/>
+                        <navigationBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" name="YP Black"/>
+                        </navigationBarAppearance>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
